--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		[<a href="https://scholar.google.com.sg/citations?user=UxFWSJIAAAAJ&hl=en">Google Scholar</a>]
 	 [<a href="papers.html">PAPERS</a>]
 	 [<a href="service.html">SERVICE</a>]
-         [a href="teaching.html">TEACHING</a>]
+         [<a href="teaching.html">TEACHING</a>]
 	</font></b>
 	   <font face="Arial" size="4" color="#800080"><p style="margin-top: 0; margin-bottom: 0">&nbsp;</p>
 
