--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
 		<a href="http://www.icse-conferences.org/">ICSE</a> and <a href="https://www.esec-fse.org/">FSE</a>. 
 		Currently, he serves as chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
 		He is a member of the editorial board of Communications of the ACM. He is the 
-		current Editor-in-Chief of the 
-		ACM Transactions on Software Engineering and Methodology (<a href="https://dl.acm.org/journal/tosem">TOSEM</a>).
+		current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
+		ACM Transactions on Software Engineering and Methodology</a> (TOSEM).
 		Abhik is a <a href="https://awards.acm.org/award-recipients/roychoudhury_UJ52779">Fellow of the ACM</a>.
 		
 		
