--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
      <li> <p> <font face="Arial">June 2025: PhD student <a href="https://mengrj.github.io/"> Ruijie Meng</a> 
 	     graduating and joining <a href="https://cispa.de/en">CISPA</a> as Asst. Prof.
-	     She is recruiting !</font></p></li> 
+	     She is recruiting !</font></p></li> <br>
 	
 	<li> <p> <font face="Arial"> Feb 2025: <a href="https://autocoderover.dev">AutoCodeRover</a>, our AI Software Engineer embodying agentic  
 	AI and a NUS spinoff, is acquired by <a href="https://sonarsource.com">SonarSource</a>. Following is a group photo 
