--- a/papers.html
+++ b/papers.html
@@ -29,10 +29,10 @@
 	
         <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[arxiv]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Will AI replace Software Engineers?
-		(<a href="https://arxiv.org/abs/2502.20429">PDF</a>)</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury, Andreas Zeller</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Appearing in arxiv March 2025, commentary on future Software industry. </p>  
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Unified Software Engineering agent as AI Software Engineer
+		(<a href="https://arxiv.org/pdf/2506.14683">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Leonhard Applis, Yuntong Zhang, Shanchao Liang, Nan Jiang, Lin Tan, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Appearing in arxiv June 2025, on coding agents as part of a dev team. </p>  
 	
 	 
 			 
