--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		</b><br><br>
 
 		
-		<i> abhik at comp.nus.edu.sg</i> (Preferred)</span><br> 
+		<i> abhik at nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>abhik.roychoudhury at gmail.com</i>
 			<br><br>
 			<u>Admin Manager</u>:
