--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		<span style="font-weight: 400"><i>abhik.roychoudhury at gmail.com</i>
 			<br><br>
 			<u>Admin Manager</u>:
-			<br> Neo Chee Yong
+			<br> Smitha (smithae@nus.edu.sg)
 			<br>
 		</span></font></H3>            			
 		</blockquote>       </DIV></TD>      		 	
