--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a>
 		<br>
 		and <br>
-		Senior Scientific Advisor<br>
+		Senior Advisor<br>
 		<a href="https://www.sonarsource.com/">SonarSource</a>
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
@@ -115,7 +115,7 @@
 	<font face="Arial"> Abhik Roychoudhury is Provost's Chair Professor of Computer Science at 
 		the <a href="https://www.comp.nus.edu.sg/cs/">National University of Singapore (NUS)</a>,
 		where he leads a research team on <a  href = "https://nus-tss.github.io/">
-	        Trustworthy and Secure Software (TSS)</a>. He is also Senior Scientific Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
+	        Trustworthy and Secure Software (TSS)</a>. He is Senior Advisor at <a href="https://www.sonarsource.com/">SonarSource</a>, subsequent to the 
 		<a href = "https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">acquisition</a>
 		of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> on AI agents for coding.
 		He received his PhD in Computer Science 
