--- a/papers.html
+++ b/papers.html
@@ -46,6 +46,21 @@
 	 <H2><font face="Arial" color="#800000" size="4">Journals / Conferences </font></H2>    <hr>    
 
 
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
+        <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
+	<font face="Arial" size="4" color="#800000">2024</font></i></b></p>
+
+
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[EmSE]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Shifting Fuzzing Left in Software Workflows
+		(<a href="./pdf/EmSE26.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Dylan Wolff, Ridwan Shariffdeen, Yannic Noller, Abhik Roychoudhury</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Empirical Software Engineering journal, To appear (2026). </p>   
+
+
+				 
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2025</font></i></b></p>
