--- a/papers.html
+++ b/papers.html
@@ -43,13 +43,13 @@
 	 
 	 
 	 
-	 <H2><font face="Arial" color="#800000" size="4">Journals / Conferences </font></H2>    <hr>    
+	 <H2><font face="Arial" color="#800000" size="4">Journals / Conferences </font></H2>    
 
 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
         <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
-	<font face="Arial" size="4" color="#800000">2024</font></i></b></p>
+	<font face="Arial" size="4" color="#800000">2026</font></i></b></p>
 
 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
@@ -60,10 +60,12 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Empirical Software Engineering journal, To appear (2026). </p>   
 
 
-				 
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
+        <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2025</font></i></b></p>
+				 
+	 
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TOSEM Editorial]</b></p>
