--- a/papers.html
+++ b/papers.html
@@ -55,7 +55,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[EmSE]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>Shifting Fuzzing Left in Software Workflows
-		(<a href="./pdf/Fuzzing_EMSE26.pdf">PDF</a>)</b></p>
+		(<a href="./pdf/Fuzzing_Survey_EMSE26.pdf">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Dylan Wolff, Ridwan Shariffdeen, Yannic Noller, Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Empirical Software Engineering journal, To appear (2026). </p>   
 
