--- a/index.html
+++ b/index.html
@@ -58,8 +58,12 @@
 	<b><font face="Arial" size="4" color="#800080">Latest</font></b></p>
 	<ul>
         
-	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !! </font><br><br>
-		
+	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !! 
+	</font><br><br>
+
+		<li> <font face="Arial"><b><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></b>Special Issue in 
+		ACM TOSEM, papers due on Nov 1 2025.
+		</font><br><br>
 	<li><font face="Arial"> Profile 
 	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">from ACM</a>
 	( from <a href="https://news.nus.edu.sg/prof-kankanhalli-prof-roychoudhury-named-acm-fellows-2024/">NUS</a>, 
