--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	</font><br><br>
 
 		<li> <font face="Arial"><b><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></b>Special Issue in 
-		ACM TOSEM, papers due on Nov 1 2025.
+		ACM TOSEM.
 		</font><br><br>
 	<li><font face="Arial"> Profile 
 	<a href= "https://www.acm.org/articles/people-of-acm/2025/abhik-roychoudhury">from ACM</a>
