--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !! 
 	</font><br><br>
 
-		<li> <font face="Arial"><b><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></b>Special Issue in 
+		<li> <font face="Arial"><i><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></i>
+		 Special Issue in 
 		ACM TOSEM.
 		</font><br><br>
 	<li><font face="Arial"> Profile 
