--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			School of Computing<br> 
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a>
 		<br>
-		and <br>
+		& <br>
 		Senior Advisor<br>
 		<a href="https://www.sonarsource.com/">SonarSource</a>
 		<br>
@@ -20,6 +20,9 @@
 		<b><a href="https://nusgs.nus.edu.sg/thesis-advisors/dcsar">NUS Grad School</a>
 		</b><br><br>
 
+	        Coordinates:<br>
+		i3 02-04<br>
+		21 Heng Mui Keng Terrace<br><br>
 		
 		<i> abhik at nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>abhik.roychoudhury at gmail.com</i>
