--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
 		<b><a href="https://nusgs.nus.edu.sg/thesis-advisors/dcsar">NUS Grad School</a>
 		</b><br><br>
 
-	        Coordinates:<br>
-		i3 02-04<br>
+	        <u>Coordinates</u>: i3 02-04<br>
 		21 Heng Mui Keng Terrace<br><br>
 		
 		<i> abhik at nus.edu.sg</i> (Preferred)</span><br> 
