--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<a href="https://www.sonarsource.com/">SonarSource</a>
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
-		<b><a href="https://x.com/AbhikRoychoudh1">X</a></b><br>
+		<b><a href="https://x.com/AbhikRoychoudh1">X</a></b>, 
 		<b><a href ="https://www.linkedin.com/in/abhik-roychoudhury-189352137/">Linkedin</a></b><br>
 		<b><a href="https://nusgs.nus.edu.sg/thesis-advisors/dcsar">NUS Grad School</a>
 		</b><br><br>
