--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<DIV align=left>         <blockquote>          
 
 		<H3><font face="Arial" size = "4"><br>
-		Abhik Roychoudhury</font>			</H3> 	
+		<a href="https://www.comp.nus.edu.sg/cs/people/abhik/">Abhik Roychoudhury</a></font>			</H3> 	
 	
 		<font face="Arial" size = "2">Provost's Chair Professor <br> 
 			<a href="https://www.nus.edu.sg/">National University of Singapore</a>
