--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 		These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for (symbolic analysis based) program repair, 
-		IEEE New Directions Award 2022 (jointly with Cristian Cadar) for 
+		IEEE New Directions Award 2022 (jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>) for 
 		contributions to symbolic execution. 
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. 
@@ -161,7 +161,8 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 	</font>   		
 
 
-	<p><font face="Arial">Software testing and analysis, Automatic Programming, Program Repair, Trustworthy systems.</font></p>
+	<p><font face="Arial">Software testing and analysis, AI agents, Automatic Programming, Program Repair, Software Security,
+	Trustworthy systems.</font></p>
 
 <ul>
 	<li> <font face="Arial"><a href="papers.html">[All Papers]</a></font></li>
@@ -343,3 +344,4 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
