--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 	<ul>
         
 	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !! 
-	</font><br><br>
+	</font>
+		<ul><li>
+	<font face="Arial">Opinion Piece on <a href= "https://arxiv.org/abs/2502.13767">Agentic AI powered software</a> </font>
+        </li></ul>
+		<br><br>
 
 		<li> <font face="Arial"><i><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></i>
 		 Special Issue in 
@@ -72,8 +76,6 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 		from <a href ="https://sigsoft.medium.com/interview-with-the-new-acm-tosem-eic-prof-abhik-roychoudhury-3ffc7bea80c2">TOSEM</a>,
 	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">alma mater</a>)
 	</font><br><br>
-		<li><font face="Arial">Opinion Piece on <a href= "https://arxiv.org/abs/2502.13767">Agentic AI powered software</a> 
-		and <a href="https://arxiv.org/abs/2502.20429">software jobs</a></font>
 		<br><br>	
 		<li> <font face="Arial">
 			<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>:
@@ -344,4 +346,5 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
