--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 		<b><a href="https://nusgs.nus.edu.sg/thesis-advisors/dcsar">NUS Grad School</a>
 		</b><br><br>
 
-	        <u>Coordinates</u>: i3 02-04<br>
+	        <u>Coordinates</u>: i3 Level 2<br>
 		21 Heng Mui Keng Terrace<br><br>
 		
 		<i> abhik at nus.edu.sg</i> (Preferred)</span><br> 
@@ -61,11 +61,11 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
         
 	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !! 
 	</font>
+		<br>
 		<ul><li>
 	<font face="Arial">Opinion Piece on <a href= "https://arxiv.org/abs/2502.13767">Agentic AI powered software</a> </font>
         </li></ul>
-		<br><br>
-
+		<br>
 		<li> <font face="Arial"><i><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></i>
 		 Special Issue in 
 		ACM TOSEM.
@@ -76,7 +76,6 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 		from <a href ="https://sigsoft.medium.com/interview-with-the-new-acm-tosem-eic-prof-abhik-roychoudhury-3ffc7bea80c2">TOSEM</a>,
 	  from <a href="https://www.cs.stonybrook.edu/about-us/News/cs-alumnus-pioneers-software-engineering-named-2024-acm-fellow">alma mater</a>)
 	</font><br><br>
-		<br><br>	
 		<li> <font face="Arial">
 			<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>:
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, 
@@ -346,5 +345,6 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
