--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 		<li> <font face="Arial">
 			<a href="https://autocoderover.dev/"><b>AutoCodeRover</b></a>:
 		<a href = "https://dl.acm.org/doi/pdf/10.1145/3650212.3680384">Paper</a>, 
-			 <a href= "https://news.nus.edu.sg/nus-spinoff-tech-autocoderover-acquired-by-sonar?utm_source=Corpsite&utm_medium=FeaturedBanner">NUS spinoff</a> on AI 
-			powered software, 
+			 <a href= "https://news.nus.edu.sg/nus-spinoff-tech-autocoderover-acquired-by-sonar?utm_source=Corpsite&utm_medium=FeaturedBanner">NUS spinoff</a> on agentic AI, 
 			<a href="https://www.sonarsource.com/company/press-releases/sonar-acquires-autocoderover-to-supercharge-developers-with-ai-agents/">Acquired by Sonar</a>!.
 	</font>
 	<br><br>
@@ -345,6 +344,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
