--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 		He is a member of the editorial board of Communications of the ACM. He is the 
 		current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
 		ACM Transactions on Software Engineering and Methodology</a> (TOSEM).
-		Abhik is a <a href="https://awards.acm.org/award-recipients/roychoudhury_UJ52779">Fellow of the ACM</a>.
+		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>.
 		
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
@@ -344,6 +344,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
