--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 		current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
 		ACM Transactions on Software Engineering and Methodology</a> (TOSEM).
 		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>, recognized for contributions to 
-		software testing and analysis.
+		automated program repair and fuzz testing.
 		
 		
 	<p style="margin-top: 0; margin-bottom: 0" align="left"> 
@@ -345,6 +345,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
