--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ e   <!doctype html public "-//w3c//dtd html 4.0 transitional//en"> <html> <head>
 	</font>
 		<br><br>
 		<ul><li>
-	<font face="Arial">Opinion Piece on <a href= "https://arxiv.org/abs/2502.13767">Agentic AI powered software</a> </font>
+	<font face="Arial">Opinion Piece on <a href= "https://arxiv.org/html/2508.17343v1">Agentic AI powered software</a> </font>
         </li></ul>
 		<br>
 		<li> <font face="Arial"><i><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></i>
@@ -345,6 +345,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
