--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 		<b><a href="https://nusgs.nus.edu.sg/thesis-advisors/dcsar">NUS Grad School</a>
 		</b><br><br>
 
-	        <u>Coordinates</u>: i3 Level 2<br>
-		21 Heng Mui Keng Terrace<br><br>
+	        <u>Coordinates</u>: <br> 
+			COM3 #02-04, 11 Research Link (office) <br>
+			or <br>
+			i3 level 2, 21 Heng Mui Keng Terrace (group)<br><br>
 		
 		<i> abhik at nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>abhik.roychoudhury at gmail.com</i>
@@ -351,6 +353,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
