--- a/index.html
+++ b/index.html
@@ -20,20 +20,19 @@
 		<br>
 		<H3><font face="Arial" size="2"><span style="font-weight: 400">
 		<b><a href="https://x.com/AbhikRoychoudh1">X</a></b>, 
-		<b><a href ="https://www.linkedin.com/in/abhik-roychoudhury-189352137/">Linkedin</a></b><br>
+		<b><a href ="https://www.linkedin.com/in/abhik-roychoudhury-189352137/">Linkedin</a></b>, 
 		<b><a href="https://nusgs.nus.edu.sg/thesis-advisors/dcsar">NUS Grad School</a>
 		</b><br><br>
 
 	        <u>Coordinates</u>: <br> 
 			COM3 #02-04, 11 Research Link (office) <br>
 			or <br>
-			i3 level 2, 21 Heng Mui Keng Terrace (group)<br><br>
+			i3 level 2, 21 Heng Mui Keng Terrace (lab)<br><br>
 		
 		<i> abhik at nus.edu.sg</i> (Preferred)</span><br> 
 		<span style="font-weight: 400"><i>abhik.roychoudhury at gmail.com</i>
 			<br><br>
-			<u>Admin Manager</u>:
-			<br> Smitha (smithae@nus.edu.sg)
+			<u>Admin Manager</u>: Smitha (smithae@nus.edu.sg)
 			<br>
 		</span></font></H3>            			
 		</blockquote>       </DIV></TD>      		 	
@@ -353,6 +352,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
