--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	</font>
 		<br><br>
 		<ul><li>
-	<font face="Arial"><a href= "https://arxiv.org/html/2508.17343v1">Opinion</a> and
+	<font face="Arial"><a href= "https://arxiv.org/pdf/2508.17343">Opinion</a> and
 		<a href="https://spectrum.ieee.org/ai-for-coding">Interview</a> on Agentic AI for code. </font>
         </li></ul>
 		<br>
@@ -352,6 +352,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
