--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !! 
 	</font>
 		<br><br>
-		<ul><li>
+		<ul>
+			<li> <a href="https://spartan-nus.github.io/ai4code-roundtable">AI for Code Roundtable</a>, 2026. 
+			<li>
 	<font face="Arial"><a href= "https://arxiv.org/pdf/2508.17343">Opinion</a> and
 		<a href="https://spectrum.ieee.org/ai-for-coding">Interview</a> on Agentic AI for code. </font>
         </li></ul>
@@ -352,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
