--- a/index.html
+++ b/index.html
@@ -144,14 +144,15 @@
 		IEEE New Directions Award 2022 (jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>) for 
 		contributions to symbolic execution. 
                 <br><br>
-		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award 2024. 
-		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions. 
-		He has served the software engineering research community in various capacities including as chair of the major conferences of the field, 
-		<a href="http://www.icse-conferences.org/">ICSE</a> (in 2024) and <a href="https://www.esec-fse.org/past_events">FSE</a> (in 2022).
-		Currently, he serves as chair of the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
-		He is a member of the editorial board of Communications of the ACM. He is the 
+		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
+		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions and gone on to 
+		leadership roles in the software engineering research community. 
+		He has himself served the software engineering research community in various capacities including as chair of 
+		the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
+		He is the 
 		current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
-		ACM Transactions on Software Engineering and Methodology</a> (TOSEM).
+		ACM Transactions on Software Engineering and Methodology</a> (TOSEM), and 
+		a member of the editorial board of Communications of the ACM.
 		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>, recognized for contributions to 
 		automated program repair and fuzz testing.
 		
@@ -354,6 +355,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
