--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
 		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions, 
-		and have gone on to take up take significant leadership roles in the software engineering research community. 
+		and have gone on to take up take up significant conference leadership roles in the software engineering research community. 
 		He has himself served the software engineering research community in various capacities including as chair of 
 		the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
 		He is the 
@@ -355,6 +355,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
