--- a/index.html
+++ b/index.html
@@ -146,11 +146,10 @@
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
 		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions, 
-		and have gone on to take up take up significant conference leadership roles in the software engineering research community. 
+		and have gone on to take up significant conference leadership roles in the software engineering research community. 
 		He has himself served the software engineering research community in various capacities including as chair of 
 		the <a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
-		He is the 
-		current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
+		He is the current Editor-in-Chief of the <a href="https://dl.acm.org/journal/tosem">
 		ACM Transactions on Software Engineering and Methodology</a> (TOSEM), and 
 		a member of the editorial board of Communications of the ACM.
 		Abhik is a <a href="https://www.acm.org/media-center/2025/january/fellows-2024">Fellow of the ACM</a>, recognized for contributions to 
@@ -355,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
