--- a/index.html
+++ b/index.html
@@ -277,13 +277,11 @@ Talk on the journey behind AutoCodeRover Large Language Model agent, 2025</p>
 </li>
 <br>
 <li><p><font face="Arial">
-<a href ="https://www.slideshare.net/slideshow/imagination-in-computer-science-research/270183360"> "Imagination in Computer Science Research"</a>, Advice to Junior Faculty at Intl. Conf. on Foundations of Software 
-	Engineering (FSE) 2024.</p>
+<a href ="https://www.slideshare.net/slideshow/beyond-phd-thesis-public-lecture-on-phd-mentoring/283252289">
+	"Beyond PhD thesis - Public Lecture"</a>, Public Lecture organized by NUS Graduate School, given
+	as the inaugural recipient of the NUS Outstanding Graduate Mentor Award.</p>
 
-<iframe src="https://www.slideshare.net/slideshow/embed_code/key/MJfy2aeAOX8rfU?hostedIn=slideshare&page=upload" width="476" height="400" 
-	frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
-	
-	
+<iframe src="https://www.slideshare.net/slideshow/embed_code/key/GAMkseTEgXx8Vp?hostedIn=slideshare&page=upload" width="476" height="400" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 </li>
 <br>
 
@@ -356,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
