--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
 		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions, 
-		and they have received many prestigious early career awards (including ACM-W Rising Star Award given to only one early career 
-		female faculty in whole of computing). Abhik has 
+		and they have gone on to receive many prestigious early career awards (including ACM-W Rising Star Award given to only one
+		female faculty member in Computing). Abhik has 
 		served the software engineering research community in various capacities including as chair of the major
 		conferences (ICSE and FSE), as well as chair of the 
 		<a href= "https://www.esec-fse.org/steering_committee">FSE steering committee</a>.
@@ -354,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
