--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 				<a href="https://spartan-nus.github.io/ai4code-roundtable">Manifesto</a> on AI for Code, 2026,
 				<a href="./pdf/brochure.pdf"><b>Brochure</b></a>.</font> <br><br>
 			<li>
-	<font face="Arial"><a href= "https://arxiv.org/pdf/2508.17343">Opinion</a> and
-		<a href="https://spectrum.ieee.org/ai-for-coding">Interview</a> on Agentic AI for code. </font>
+	<font face="Arial"><a href= "https://arxiv.org/pdf/2502.13767">Opinion piece</a> due to appear in Communications of the ACM,
+		<li>
+		<a href="https://spectrum.ieee.org/ai-for-coding">Interview</a> on Agentic AI for code by IEEE Spectrum. </font>
         </li></ul>
 		<br>
 		<li> <font face="Arial"><i><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></i>
@@ -354,6 +355,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
