--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 		<ul>
 			<li> <font face="Arial">
 				<a href="https://spartan-nus.github.io/ai4code-roundtable">Manifesto</a> on AI for Code, 2026,
-				<a href="./pdf/brochure.pdf"><b>Brochure</b></a>.</font> <br><br>
+				<a href="./pdf/brochure.pdf"><b>Brochure</b></a>.</font> <br>
 			<li>
-	<font face="Arial"><a href= "https://arxiv.org/pdf/2502.13767">Opinion piece</a> due to appear in Communications of the ACM,
+	<font face="Arial"><a href= "https://arxiv.org/pdf/2502.13767">Opinion piece</a> on agents in Communications of the ACM. <br>
 		<li>
 		<a href="https://spectrum.ieee.org/ai-for-coding">Interview</a> on Agentic AI for code in IEEE Spectrum. </font>
         </li></ul>
@@ -355,6 +355,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
