--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 		<br><br>
 		<ul>
 			<li> <font face="Arial">
-				<a href="https://spartan-nus.github.io/ai4code-roundtable">Manifesto</a> on AI for Code, 2026,
-				<a href="./pdf/brochure.pdf"><b>Brochure</b></a>.</font> <br>
+				<a href="https://spartan-nus.github.io/ai4code-roundtable">Manifesto</a> on AI for Code, Jan 2026.</font> <br>
 			<li>
 	<font face="Arial"><a href= "https://arxiv.org/pdf/2502.13767">Opinion piece</a> in Communications of the ACM. <br>
 		<li>
@@ -355,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
