--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 			<li> <font face="Arial">
 				<a href="https://spartan-nus.github.io/ai4code-roundtable">Manifesto</a> on AI for Code, Jan 2026.</font> <br>
 			<li>
-	<font face="Arial"><a href= "https://arxiv.org/html/2502.13767v4">Opinion piece</a> in Communications of the ACM. <br>
+	<font face="Arial"><a href= "https://arxiv.org/pdf/2502.13767">Opinion piece</a> in Communications of the ACM. <br>
 		<li>
 		<a href="https://spectrum.ieee.org/ai-for-coding">Interview</a> on Agentic AI for code in IEEE Spectrum. </font>
         </li></ul>
@@ -354,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
