--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 			<li> <font face="Arial">
 				<a href="https://spartan-nus.github.io/ai4code-roundtable">Manifesto</a> on AI for Code, Jan 2026 (<a href="./pdf/AIforCodeBrochure.pdf">Brochure</a>).</font> <br>
 			<li>
-	<font face="Arial"><a href= "https://arxiv.org/pdf/2502.13767">Opinion piece</a> in Communications of the ACM. <br>
+	<font face="Arial"><a href= "https://arxiv.org/pdf/2502.13767">Opinion piece</a> to appear in Communications of the ACM. <br>
 		<li>
-		<a href="https://spectrum.ieee.org/ai-for-coding">Interview</a> on Agentic AI for code in IEEE Spectrum. </font>
+		<a href="https://spectrum.ieee.org/ai-for-coding">Interview</a> on Agentic AI for code appeared in IEEE Spectrum. </font>
         </li></ul>
 		<br>
 		<li> <font face="Arial"><i><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></i>
@@ -350,6 +350,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
