--- a/papers.html
+++ b/papers.html
@@ -75,13 +75,7 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Communications of the ACM (CACM), To appear.<br>
 		(<i> Released in arxiv Feb 19 2025, coinciding with AutoCodeRover acquisition announcement</i>) </p> 
 
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
-	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TSE]</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Enhancing Protocol Fuzzing via Diverse Seed
-Corpus Generation (<a href="./pdf/TSE_PSG_2025.pdf">PDF</a>)</b></p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhengxiong Luo, Qingpeng Du, Yujue Wang, Abhik Roychoudhury, Yu Jiang</p>
-	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE Transactions on Software Engineering, To appear (2026). </p>   
-	 
+	
 				 
 
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    
@@ -95,7 +89,15 @@ Corpus Generation (<a href="./pdf/TSE_PSG_2025.pdf">PDF</a>)</b></p>
 		(<a href="https://dl.acm.org/doi/pdf/10.1145/3708477">PDF</a>)</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Abhik Roychoudhury</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM Transactions on Software Engineering and Methodology (TOSEM), 
-		Editorial as Incoming EiC, 2025. </p>  		 
+		Editorial as Incoming EiC, 2025. </p>  		
+
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[TSE]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> Enhancing Protocol Fuzzing via Diverse Seed
+Corpus Generation (<a href="./pdf/TSE_PSG_2025.pdf">PDF</a>)</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhengxiong Luo, Qingpeng Du, Yujue Wang, Abhik Roychoudhury, Yu Jiang</p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">IEEE Transactions on Software Engineering, 51(9), 2025. </p>   
+	 
 				 
 	
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
@@ -991,6 +993,7 @@ Video</a>
 	</font></font></font>
 	<H2> <font face="Arial" size="4" color="#800000">Book</font></H2>  <HR> <p><font face="Arial" size="2"><b><a href="Book/AbhikESBook09.html"> <font color="#800080">Embedded Systems and Software Validation</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><br> Abhik Roychoudhury&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br> Book from Elsevier (formerly Morgan Kaufmann), 2009. Officially translated to Mandarin by  Tsinghua University Press.</font></p>   <font face="Arial" size="2"> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> <a href="http://www.nowpublishers.com/articles/foundations-and-trends-in-electronic-design-automation/EDA-037"> <font color="#800080">Time Predictable Embedded  Software on Multi-core Platforms: Analysis and Optimization</font></a><font color="#800080"> 	( <a href="pdf/predictability-journal.pdf"><font color="#800080">&nbsp;PDF</font></a>  	)</font></b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Sudipta Chattopadhyay, Abhik Roychoudhury,  Jakob Rosen, Petru Eles, Zebo Peng</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Foundations and Trends in  Electronic Design Automation, 8(3-4), pages 199-356, 2014.</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font color="#FF0000"><i>This is  a monograph (~175 pages) describing advances in the area.</i></font></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    <hr>  </font>   </BODY> </HTML> 
+
 
 
 
