--- a/papers.html
+++ b/papers.html
@@ -56,7 +56,7 @@
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>
-		<a href ="https://arxiv.org/pdf/2506.14683">Unified Software Engineering agent as AI Software Engineer</a>
+		Unified Software Engineering agent as AI Software Engineer (<a href ="https://arxiv.org/pdf/2506.14683"> PDF </a>)
 		</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Leonhard Applis, Yuntong Zhang, Shanchao Liang, Nan Jiang, Lin Tan, Abhik Roychoudhury </p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/IEEE International Conference on Software Engineering, 2026.</p>
@@ -64,7 +64,7 @@
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>
-		<a href ="./pdf/ICSE26-security.pdf">Repairing LLM Executions for Secure Automatic Programming</a>
+		Repairing LLM Executions for Secure Automatic Programming (<a href ="./pdf/ICSE26-security.pdf"> PDF </a>)
 		</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Ali El Husseini, Yacine Izza, Blaise Genest, Abhik Roychoudhury </p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/IEEE International Conference on Software Engineering, 2026.</p>
@@ -1007,6 +1007,7 @@ Video</a>
 	</font></font></font>
 	<H2> <font face="Arial" size="4" color="#800000">Book</font></H2>  <HR> <p><font face="Arial" size="2"><b><a href="Book/AbhikESBook09.html"> <font color="#800080">Embedded Systems and Software Validation</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><br> Abhik Roychoudhury&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br> Book from Elsevier (formerly Morgan Kaufmann), 2009. Officially translated to Mandarin by  Tsinghua University Press.</font></p>   <font face="Arial" size="2"> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> <a href="http://www.nowpublishers.com/articles/foundations-and-trends-in-electronic-design-automation/EDA-037"> <font color="#800080">Time Predictable Embedded  Software on Multi-core Platforms: Analysis and Optimization</font></a><font color="#800080"> 	( <a href="pdf/predictability-journal.pdf"><font color="#800080">&nbsp;PDF</font></a>  	)</font></b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Sudipta Chattopadhyay, Abhik Roychoudhury,  Jakob Rosen, Petru Eles, Zebo Peng</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Foundations and Trends in  Electronic Design Automation, 8(3-4), pages 199-356, 2014.</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font color="#FF0000"><i>This is  a monograph (~175 pages) describing advances in the area.</i></font></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    <hr>  </font>   </BODY> </HTML> 
+
 
 
 
