--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 	</font>
 		<br><br>
 		<ul>
+			<li> New research program <i>AI agents for Program Reasoning</i> jointly with Cristian Cadar
+				<ul>
+				<li>Email me if you are seeking a PhD/postdoc position!</li>
+				</ul>	
+			</li>
 			<li> <font face="Arial">
 				<a href="https://spartan-nus.github.io/ai4code-roundtable">Manifesto</a> on AI for Code, Jan 2026 (<a href="./pdf/AIforCodeBrochure.pdf">Brochure</a>).</font> <br>
 			<li>
@@ -196,9 +201,8 @@
 	   
 <ul>
 
-     <li> <p> <font face="Arial">July 2025: PhD student <a href="https://mengrj.github.io/"> Ruijie Meng</a> 
-	     graduating and joining <a href="https://cispa.de/en">CISPA</a> as Asst. Prof.
-	     She is recruiting !</font></p></li> 
+     <li> <p> <font face="Arial">Oct / Nov 2025: Starting a new research program <i>AI for Program Reasoning</i> co-led with Cristian Cadar ! 
+		 Please contact me for PhD and postdoc positions!! </font></p></li> 
 
 <li> <p> <font face="Arial"> June 2025: ACM Fellow 2024, at ACM Awards Banquet <br></font></p>
 	<img border="0" src="abhik-pictures/acm2024.jpg" width="400" height="267">
@@ -350,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
