Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
 	</font>
 		<br><br>
 		<ul>
-			<li> New research program <i>AI agents for Program Reasoning</i> jointly with Cristian Cadar
+			<li> New research project <i>AI agents for Program Reasoning</i> jointly with Cristian Cadar
 				<ul>
+				<li>Funded under NRF AI for Science call.</li>	
 				<li>Email me if you are seeking a PhD/postdoc position!</li>
 				</ul>	
 			</li>
@@ -354,6 +355,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
