Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -60,13 +60,12 @@
 	<ul>
         
 	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !! 
-	</font>
 		<br><br>
 		<ul>
 			<li> New research project <i>AI agents for Program Reasoning</i> jointly with Cristian Cadar
 				<ul>
 				<li>Funded under NRF AI for Science call.</li>	
-				<li>Email me if you are seeking a PhD/postdoc position!</li>
+				<li>Email me if you are seeking a PhD/postdoc position!</li></font>
 				</ul>	
 			</li>
 			<li> <font face="Arial">
@@ -355,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
