--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 <ul>
 
      <li> <p> <font face="Arial">Oct / Nov 2025: Starting a new research program <i>AI for Program Reasoning</i> co-led with Cristian Cadar ! 
-		 Please contact me for PhD and postdoc positions!! </font></p></li> 
+		 Contact me for PhD and postdoc positions!! </font></p></li> 
 
 <li> <p> <font face="Arial"> June 2025: ACM Fellow 2024, at ACM Awards Banquet <br></font></p>
 	<img border="0" src="abhik-pictures/acm2024.jpg" width="400" height="267">
@@ -354,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
