--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	<li> <font face="Arial"><b><a href="https://spartan-nus.github.io/">SPARTAN</a></b> effort in Agentic AI research launched !! 
 		<br><br>
 		<ul>
-			<li> New research project <i>AI agents for Program Reasoning</i> jointly with Cristian Cadar
+			<li> New project <i>AI agents for Program Reasoning</i> (<a href="./pdf/SP26.pdf">sample initial work</a>)
 				<ul>
 				<li>Funded under NRF AI for Science call.</li>	
 				<li>Email me if you are seeking a PhD/postdoc position!</li></font>
@@ -201,8 +201,8 @@
 	   
 <ul>
 
-     <li> <p> <font face="Arial">Oct / Nov 2025: Starting a new research program <i>AI agents for Program Reasoning</i> co-led with Cristian Cadar ! 
-		 Contact me for PhD and postdoc positions!! </font></p></li> 
+     <li> <p> <font face="Arial">Oct / Nov 2025: New research program <i>AI agents for Program Reasoning</i> 
+		 (<a href="./pdf/SP26.pdf">sample initial work</a>). Contact for PhD and postdoc positions!! </font></p></li> 
 
 <li> <p> <font face="Arial"> June 2025: ACM Fellow 2024, at ACM Awards Banquet <br></font></p>
 	<img border="0" src="abhik-pictures/acm2024.jpg" width="400" height="267">
@@ -354,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
