Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<li> New project <i>AI agents for Program Reasoning</i> (<a href="./pdf/SP26.pdf">sample initial work</a>)
 				<ul>
 				<li>Funded under NRF AI for Science call.</li>	
-				<li>Email me if you are seeking a PhD/postdoc position!</li></font>
+				<li>Send email if you are seeking a PhD/postdoc position!</li></font>
 				</ul>	
 			</li>
 			<li> <font face="Arial">
@@ -354,6 +354,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
