Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 		These works have been honored with various awards including an 
 		<a href = "https://www.sigsoft.org/awards/icseMIPAward.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, 
-		IEEE New Directions Award 2022 (jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>) for 
+		IEEE New Directions Award 2022, jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, for 
 		contributions to symbolic execution. 
                 <br><br>
 		Abhik was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
@@ -346,6 +346,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
