--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
 <ul> 
 <li>
 	<p><font face="Arial">
-Talk on the journey behind AutoCodeRover Large Language Model agent, 2025</p>
-<iframe width="600" height="300" src="https://www.youtube.com/embed/o8B6q8FNC70" 
-	title="AutoCodeRover: from research on Automatic Programming to Spinoff Acquisition" 
-	frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; 
-	web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+Plenary Speech at InnovFest Suzhou on Agentic AI for Software, October 2025</p>
+
+<iframe src="https://www.slideshare.net/slideshow/embed_code/key/oicjSgmdFLAo8Y?hostedIn=slideshare&page=upload" 
+	width="500" height="420" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
+	
 </li><br>	
 <li>
 	
@@ -346,6 +346,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
