--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<a href="https://spectrum.ieee.org/ai-for-coding">Interview</a> on Agentic AI for code appeared in IEEE Spectrum. </font>
         </li></ul>
 		<br>
-		<li> <font face="Arial"><i><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a></i>
+		<li> <font face="Arial"><a href="https://dl.acm.org/journal/tosem/agentic-ai-software">Agentic AI in Software</a>
 		 Special Issue in 
 		ACM TOSEM.
 		</font><br><br>
@@ -342,6 +342,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
