--- a/papers.html
+++ b/papers.html
@@ -45,6 +45,8 @@
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b><i>  	
 	<font face="Arial" size="4" color="#800000">2026</font></i></b></p>
 
+
+
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[SP]</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>
@@ -52,6 +54,14 @@
 		</b></p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Zhengxiong Luo, Huan Zhao, Dylan Wolff, Cristian Cadar, Abhik Roychoudhury </p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">47th IEEE Symposium on Security and Privacy, 2026.</p>
+
+<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
+	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE-SEIP]</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>
+		Fixing Security Vulnerabilities with Agentic AI in OSS-Fuzz (<a href ="./pdf/icse2026-seip.pdf">PDF</a>)
+		</b></p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Yuntong Zhang, Jiawei Wang, Dominic Berzin, Martin Mirchev, Abhik Roychoudhury </p>
+	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">ACM/IEEE International Conference on Software Engineering, 2026 (SEIP track).</p>
 
 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	 <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b>[ICSE]</b></p>
@@ -1015,6 +1025,7 @@ Video</a>
 	</font></font></font>
 	<H2> <font face="Arial" size="4" color="#800000">Book</font></H2>  <HR> <p><font face="Arial" size="2"><b><a href="Book/AbhikESBook09.html"> <font color="#800080">Embedded Systems and Software Validation</font></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </b><br> Abhik Roychoudhury&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br> Book from Elsevier (formerly Morgan Kaufmann), 2009. Officially translated to Mandarin by  Tsinghua University Press.</font></p>   <font face="Arial" size="2"> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><b> <a href="http://www.nowpublishers.com/articles/foundations-and-trends-in-electronic-design-automation/EDA-037"> <font color="#800080">Time Predictable Embedded  Software on Multi-core Platforms: Analysis and Optimization</font></a><font color="#800080"> 	( <a href="pdf/predictability-journal.pdf"><font color="#800080">&nbsp;PDF</font></a>  	)</font></b></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Sudipta Chattopadhyay, Abhik Roychoudhury,  Jakob Rosen, Petru Eles, Zebo Peng</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">Foundations and Trends in  Electronic Design Automation, 8(3-4), pages 199-356, 2014.</p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px"><font color="#FF0000"><i>This is  a monograph (~175 pages) describing advances in the area.</i></font></p> <p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>
 	<p style="MARGIN-TOP: 0px; MARGIN-BOTTOM: 0px">&nbsp;</p>    <hr>    <hr>  </font>   </BODY> </HTML> 
+
 
 
 
