--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 	</font>   		
 
 
-	<p><font face="Arial">Software testing and analysis, AI agents, Automatic Programming, Program Repair, Software Security,
+	<p><font face="Arial">Software testing and analysis, AI for code, Automatic Programming, Program Repair, Software Security,
 	Trustworthy systems.</font></p>
 
 <ul>
@@ -338,6 +338,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
