--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@
 		He received his PhD in Computer Science 
 		from the <a href="https://www.cs.stonybrook.edu/">Stony Brook University</a> in 2000, 
 		and has been a faculty member at NUS School of Computing since 2001.
-		Abhik's group at NUS has focused on symbolic program analysis, along with 
-		applications of program analysis to areas such as computer security, agentic AI or cyber-physical systems. 
-		These works have been honored with various awards including an 
+		Abhik's group at NUS has focused on symbolic program analysis and software security with applications in various domains
+		such as agentic AI for code. These works have been honored with various awards including an 
 		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, 
 		IEEE New Directions Award 2022, jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, for 
@@ -337,6 +336,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
