--- a/index.html
+++ b/index.html
@@ -130,9 +130,14 @@
 		<a href = "https://www.icse-conferences.org/mostinfluential.html">International Conference on Software Engineering (ICSE) Most Influential Paper Award</a> 
 		(Test-of-time award) for symbolic analysis based program repair, 
 		IEEE New Directions Award 2022, jointly with <a ref="https://www.doc.ic.ac.uk/~cristic/">Cristian Cadar</a>, for 
-		contributions to symbolic execution. The work on program repair has been carried forward in the form of AI agents for code, which led the 
+		contributions to symbolic execution. <br><br>
+			
+		Abhik's work on program repair has been carried forward in the form of AI agents for code, which led the 
 		acquisition of his spinoff <a href="https://autocoderover.dev">AutoCodeRover</a> by <a href="https://www.sonarsource.com/">SonarSource</a>.
-                <br><br>
+		The works on fuzz testing in 2016-17 have led to explanation of how the fuzzing algorithms work, thereby creating a community, and significantly 
+		lowering the entry barrier to conducting security testing of software on a daily basis. 
+        
+			<br><br>
 		Abhik enjoys mentoring researchers, and was the inaugural recipient of the NUS Outstanding Graduate Mentor Award. 
 		Doctoral students graduated from his research team have taken up faculty positions in many top academic institutions, 
 		and they have gone on to receive many prestigious early career awards (including ACM-W Rising Star Award given to only one
@@ -336,6 +341,7 @@ Overview talk on Fuzz Testing at Dagstuhl Seminar, November 2021. <br>
 
 	<b> 	 	 	<font face="Arial" size="4" color="#800080">      	 	<hr> <br><br> 			 	
 	</font> 			 	</font> 			 	</body> </html>    
+
 
 
 
